fix nav-bar tab spacing

--- a/web/scss/features/sidebar.scss
+++ b/web/scss/features/sidebar.scss
@@ -73,6 +73,7 @@
     background: #00457b;
     border-color: #00457b;
     color: #fff;
+    height: 32px;
   }
 
   .nav-item a:hover {
@@ -90,6 +91,7 @@
   .nav-item {
     color: #fff;
     cursor: pointer;
+    height: 31px;
   }
 
   .layer-container {
